--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="" rel="style.css" type="text/css">
-        <link href="assets/css/style.css" rel="style.css" type="text/css">
+        <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
         <script src="assets/javascript/game.js"></script>
     </head>
+    <body>
+        <div class="content">
+            <h1>Hangman</h1>
+            <h2>Winter is coming</h2>
+            <section>
+
+                <div class = "scoreboard">
+                    <div class ="wins">
+                        <h3 class="label">Wins</h3>
+                        <span>
+
+                        </span>
+                    </div>
+                <div class ="losses">
+                        <h3 class="label">Losses</h3>
+                        <span>
+
+                        </span>
+                </div>
+                </div>
+                <div class = "hangman-wrap">
+                <div class="img-wrap">
+                    <img src="assets/images/6_lives-0.jpg"/>
+                </div>
+                    <div class = "hidden-word">
+                        Press any key to play
+                    </div>
+                </div>
+                <div class ="guessed-letters">
+                    <h3>Letters Guessed</h3>
+                    <p></p>
+                </div>
+            </section>
+        </div>
+    </body>
 </html>
